# mrmat-python-api-grpc

./: .gitignore  LICENSE  README.md  pytest.ini  requirements.txt  setup.cfg
.github/workflows/: build.yml
ci/: __init__.py
mrmat_python_api_grpc/: __init__.py  client.py  grpc_api_pb2.py  grpc_api_pb2_grpc.py  server.py
mrmat_python_api_grpc/apis/greeting/: __init__.py
mrmat_python_api_grpc/apis/greeting/v1/: __init__.py  api.py
mrmat_python_api_grpc/apis/greeting/v2/: __init__.py  api.py
mrmat_python_api_grpc/apis/healthz/: __init__.py  api.py
mrmat_python_api_grpc/apis/resource/v1/: __init__.py  api.py
var/proto/: grpc-api.proto
