[metadata]
name = mrmat-python-api-grpc
version = attr: ci.version
author = Mathieu Imfeld
author_email = imfeldma+9jqerw@gmail.com
maintainer = Mathieu Imfeld
maintainer_email = imfeldma+9jqerw@gmail.com
long_description = file: README.md
license = MIT
url = https://github.com/MrMatOrg/mrmat-python-api-grpc
classifiers =
    Development Status :: 3 - Alpha
    License :: OSI Approved :: MIT
    Programming Language :: Python :: 3.10

[options]
packages = find:
install_requires =
    grpcio~=1.44.0
    grpcio-tools~=1.44.0

[options.entry_points]
console_scripts =
    mrmat-python-api-grpc-server = mrmat_python_api_grpc.server:main
    mrmat-python-api-grpc-client = mrmat_python_api_grpc.client:main

[options.packages.find]
exclude =
    ci
